--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="col-lg-8 col-md-7 col-sm-6">
-        <h1 style="margin: 30px;">These Shows All Suck</h1>
+        <h1 style="margin: 30px">These Shows All Suck</h1>
       </div>
       <table class="table table-striped table-hover">
         <tr>
